# wazuh-testgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
output/: test_SonicWall_rules.py  test_amazon_sec_lake_rules.py  test_apache_rules.py  test_api_rules.py  test_apparmor_rules.py  test_arbor_rules.py  test_audit_scp_rules.py  test_auditd_rules.py  test_aws_s3_access_rules.py  test_aws_security_hub_rules.py  test_checkpoint_smart1_rules.py  test_cimserver_rules.py  test_cisco_asa_rules.py  test_cisco_ftd_rules.py  test_cisco_ios_rules.py  test_cloudflare-waf_rules.py  test_cloudflare_waf_rules.py  test_cpanel_rules.py  test_doas_rules.py  test_dovecot_rules.py  test_dropbear_rules.py  test_eset_rules.py  test_exchange_rules.py  test_exim_rules.py  test_f5_big_ip_rules.py  test_fireeye_rules.py  test_firewalld_rules.py  test_fixed_auditd_rules.py  test_fortiauth_rules.py  test_fortiddos_rules.py  test_fortigate_rules.py  test_fortimail_rules.py  test_freepbx_rules.py  test_gcp_rules.py  test_github_rules.py  test_gitlab_rules.py  test_glpi_rules.py  test_huawei_usg_rules.py  test_iptables_rules.py  test_junos_rules.py  (+67 more)
output/regression_tests/: test_amazon_sec_lake_rules.py  test_api_rules.py  test_aws_security_hub_rules.py  test_checkpoint_smart1_rules.py  test_cimserver_rules.py  test_cisco_ios_rules.py  test_eset_rules.py  test_exim_rules.py  test_f5_big_ip_rules.py  test_fireeye_rules.py  test_fortiauth_rules.py  test_fortimail_rules.py  test_gcp_rules.py  (+26 more)
src/: generator.py  wazuh-converter.py
(+7 files in other folders)
